--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
     <h2 class="text-center our-expert-header">Our Expert Team <span class="color-blue">Members</span></h2>
     <p class="color-grey text-center pt-2 fs-5">It is a long established fact that a reader will be distracted by the
       readable<br>content .It is a long established fact that a reader </p>
-    <div class="our-expert-sec-cards d-flex flex-column flex-lg-row justify-content-center mt-5 gap-5 mb-5">
+    <div class="our-expert-sec-cards d-flex flex-column flex-md-row justify-content-center align-items-center mt-5 gap-lg-5 gap-2 mb-5">
       <div class="expert-cards hidden d-flex flex-column justify-content-center px-5 py-3">
         <img src="/images/expert-team/muriel.png" class="img-fluid" alt="muriel image">
         <h3 class="mt-3 text-center">Muriel Whee</h3>
