--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous" />
   <script src="https://kit.fontawesome.com/3df1d54834.js" crossorigin="anonymous"></script>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap');
-  </style>
+  
 </head>
 
 <body>
@@ -91,7 +89,7 @@
 
       <div class="hero-card mb-5">
         <span class="d-flex flex-column flex-md-row align-items-center gap-1">
-          <img src="/images/hero-section/email.png"  alt=" email" class="img-fluid">
+          <img src="/images/hero-section/email.png" alt=" email" class="img-fluid">
           <h2 class="fw-light">Email Marketing</h2>
         </span>
         <p class="hero-section-text m-2">It is a long established fact that a reader will be distracted by the readable
@@ -101,7 +99,7 @@
 
       <div class="hero-card mb-5">
         <span class="d-flex flex-column flex-md-row align-items-center gap-1">
-         <img src="/images/hero-section/seo.png" class="img-fluid" alt="seo-image">
+          <img src="/images/hero-section/seo.png" class="img-fluid" alt="seo-image">
           <h2 class="fw-light">SEO Management</h2>
         </span>
         <p class="hero-section-text m-2">It is a long established fact that a reader will be distracted by the readable
@@ -115,7 +113,7 @@
 
   <section class="container mt-5">
     <div class="optimise">
-      <span >
+      <span>
         <h1>Optimising Your <span class="color-blue">Website</span></h1>
         <p class="optimise-sec-text mt-3">It is a long established fact that a reader will be distracted by the readable
           content of a page when It is a long .</p>
@@ -123,7 +121,7 @@
 
       <div class="optimise-card-sec d-flex flex-column  flex-lg-row gap-3">
         <div class="optimise-cards d-flex flex-column justify-content-sm-center text-center">
-          <span >
+          <span>
             <img src="/images/optimise-section/research.png" class="bg-white mb-5 p-3" alt="researvh image">
           </span>
 
@@ -165,7 +163,8 @@
     <div class="business-sec-container mb-5">
       <div class="container business-sec-container d-flex flex-column flex-lg-row">
         <div class="business-section-left mt-5">
-          <p class="business-sec-head mt-5 mb-5 fw-bold">Perfect Solution For <br> Your <span class="color-blue">Business</span></p>
+          <p class="business-sec-head mt-5 mb-5 fw-bold">Perfect Solution For <br> Your <span
+              class="color-blue">Business</span></p>
           <p class="business-sec-text mt-5 mb-5">It is a long established fact that a reader will be distracted by the
             It is a long established .t is a long established fact that a reader will be distracted by the readable
             content of .</p>
@@ -180,7 +179,7 @@
 
     <div class="container business-card-sec d-flex flex-lg-row flex-column mt-5 gap-5 justify-content-center">
       <div class="business-card  mb-5 ">
-        <img src="/images/business-section/grow.png" class="img-fluid ps-2"  alt="grow image">
+        <img src="/images/business-section/grow.png" class="img-fluid ps-2" alt="grow image">
         <p class="text-dark fw-semibold mt-4 mb-3 ps-2">Grow Your Business</p>
         <p class="color-grey ps-2">It is a long established fact that a reader will be distracted by.</p>
         <a href="#" class="text-decoration-none ps-2">Read More...</a>
@@ -192,7 +191,7 @@
         <a href="#" class="text-decoration-none ps-2">Read More...</a>
       </div>
       <div class="business-card mb-5 ps-2">
-        <img src="/images/business-section/sales.png" class="ps-2 img-fluid"  alt="drive image">
+        <img src="/images/business-section/sales.png" class="ps-2 img-fluid" alt="drive image">
         <p class="text-dark fw-semibold mt-4 mb-3 ps-2">Drive more sales</p>
         <p class="color-grey ps-2">It is a long established fact that a reader will be distracted by.</p>
         <a href="#" class="text-decoration-none mb-3 ps-2">Read More...</a>
@@ -214,24 +213,21 @@
 
       <div class="card-section d-flex flex-column flex-lg-row gap-3 justify-content-center mb-5 pb-5 flex-md-wrap mt-4">
         <div class="choose-us-card d-flex justify-content-center flex-column">
-          <img src="/images/choose-us-section/optimization.png" class="mx-auto mt-3 img-fluid" 
-            alt="optimization image">
+          <img src="/images/choose-us-section/optimization.png" class="mx-auto mt-3 img-fluid" alt="optimization image">
           <p class="mx-auto mt-3 mb-3">See Optimazadion</p>
           <p class="mx-3 text-center">It is a long established fact that a reader will be distracted by.It is a long
             established.</p>
           <button type="button" class="btn btn-warning mx-auto mb-5">Learn More</button>
         </div>
         <div class="choose-us-card d-flex justify-content-center flex-column">
-          <img src="/images/choose-us-section/research.png" class="mx-auto mt-3 img-fluid"
-            alt="optimization image">
+          <img src="/images/choose-us-section/research.png" class="mx-auto mt-3 img-fluid" alt="optimization image">
           <p class="mx-auto mt-3 mb-3">Keyword Research</p>
           <p class="mx-3 text-center">It is a long established fact that a reader will be distracted by.It is a long
             established.</p>
           <button type="button" class="btn btn-warning  mx-auto mb-5">Learn More</button>
         </div>
         <div class="choose-us-card d-flex justify-content-center flex-column">
-          <img src="/images/choose-us-section/marketingg.png" class="mx-auto mt-3 img-fluid" 
-            alt="optimization image">
+          <img src="/images/choose-us-section/marketingg.png" class="mx-auto mt-3 img-fluid" alt="optimization image">
           <p class="mx-auto mt-3 mb-3">Social Marketing</p>
           <p class="mx-3 text-center">It is a long established fact that a reader will be distracted by.It is a long
             established.</p>
@@ -258,8 +254,7 @@
           content. It is a long established fact that a reader .It is a long.</span>
 
         <div class="social-media-cards d-flex flex-column flex-md-row mt-5 gap-5 ps-3">
-          <div><img src="/images/media-section/social-media.png" class="img-fluid pb-2"
-              alt="social-media-image"></div>
+          <div><img src="/images/media-section/social-media.png" class="img-fluid pb-2" alt="social-media-image"></div>
           <div>
             <h4 class="fw-light">Social Media Marketing</h4>
             <span class="color-grey ">
@@ -269,8 +264,7 @@
         </div>
 
         <div class="social-media-cards d-flex flex-column flex-md-row mt-5 gap-5 ps-3">
-          <div><img src="/images/media-section/email.png" class="img-fluid pb-2" 
-              alt="social-media-image"></div>
+          <div><img src="/images/media-section/email.png" class="img-fluid pb-2" alt="social-media-image"></div>
           <div>
             <h4 class="fw-light">Email Marketing</h4>
             <span class="color-grey ">
@@ -280,8 +274,7 @@
         </div>
 
         <div class="social-media-cards d-flex flex-column flex-md-row mt-5 gap-5 ps-3">
-          <div><img src="/images/media-section/seo.png" class="img-fluid pb-2" 
-              alt="social-media-image"></div>
+          <div><img src="/images/media-section/seo.png" class="img-fluid pb-2" alt="social-media-image"></div>
           <div>
             <h4 class="fw-light">SEO Optimization</h4>
             <span class="color-grey ">
@@ -406,7 +399,8 @@
     <h2 class="text-center our-expert-header">Our Expert Team <span class="color-blue">Members</span></h2>
     <p class="color-grey text-center pt-2 fs-5">It is a long established fact that a reader will be distracted by the
       readable<br>content .It is a long established fact that a reader </p>
-    <div class="our-expert-sec-cards d-flex flex-column flex-md-row justify-content-center align-items-center mt-5 gap-lg-5 gap-2 mb-5">
+    <div
+      class="our-expert-sec-cards d-flex flex-column flex-md-row justify-content-center align-items-center mt-5 gap-lg-5 gap-2 mb-5">
       <div class="expert-cards hidden d-flex flex-column justify-content-center px-5 py-3">
         <img src="/images/expert-team/muriel.png" class="img-fluid" alt="muriel image">
         <h3 class="mt-3 text-center">Muriel Whee</h3>
@@ -467,7 +461,7 @@
             reader will be<br> distracted by the readable content .It is a long<br>
             established fact that a reader</p>
           <img src="/images/expert-team/clay.png" class="img-fluid" alt="Clay Porter">
-          <h4 >Clay Porter</h4>
+          <h4>Clay Porter</h4>
           <p class="color-grey">Ship builder</p>
         </div>
         <div class="clients-card px-5 rounded-1 mt-5 mb-5 d-flex justify-content-center flex-column align-items-center"
@@ -477,7 +471,7 @@
             reader will be<br> distracted by the readable content .It is a long<br>
             established fact that a reader</p>
           <img src="/images/expert-team/clay2.png" class="img-fluid" alt="Clay Porter">
-          <h4 >Clay Porter</h4>
+          <h4>Clay Porter</h4>
           <p class="color-grey">Ship builder</p>
         </div>
       </div>
@@ -521,7 +515,8 @@
     </ul>
 
     <hr class="mt-5 text-secondary mx-5">
-    <div class="foot-copyright d-flex flex-column-reverse flex-md-row justify-content-between color-grey fw-lighter mx-5">
+    <div
+      class="foot-copyright d-flex flex-column-reverse flex-md-row justify-content-between color-grey fw-lighter mx-5">
       <p class="text-center">Copyright © 2023 nuvosa, All rights reserved.</p>
       <div class="copy-right-section d-flex flex-column flex-md-row  text-center mt-2 mb-5 gap-3">
         <a href="#" class="nav-link ">Terms of use</a>
